src/app/components/countdown/counter.scss
.counter-container{
    display: flex;
    flex-direction: column;
    gap: 16px;
    justify-content: flex-start;
    align-items: center;
    align-self: stretch;
    width: 100%;

    .flash{
        display: flex;
        flex-direction: column;
        gap: 16px;
        justify-content: center;
        align-items: flex-start;
        align-self: stretch;
        .today{
            display: flex;
            justify-content: flex-start;
            gap: 16px;
            align-items: center;
            .icon{
                height: 40px;
                width: 10px;
                background: #DB4444;
                border-radius: 5px;

            }
            .txt-title{
                font-size: 20px;
                font-weight: 700;
                color: #DB4444;
                font-family: "DM sans";


            }
        }
        .header-div{
            display: flex;
            gap: 48px;
            justify-content: center;
            align-items: center;
            .header-title{
                font-weight: 700;
                font-size: 30px;
                font-family: "DM sans";


            }
        }
    }

}
.countdown-display{
    font-family: "DM sans";
    font-size: 18px;
}

